Realize addWorker function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.17)
-project(Woker_Management)
+project(Worker_Management)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Woker_Management main.cpp workerManagement.cpp workerManagement.h personnel.cpp personnel.h worker.h finance.cpp finance.h gmo.cpp gmo.h sales.cpp sales.h production.cpp production.h)
+add_executable(workermanagement.exe main.cpp workerManagement.cpp workerManagement.h personnel.cpp personnel.h worker.h finance.cpp finance.h gmo.cpp gmo.h sales.cpp sales.h production.cpp production.h)
+
