--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,8 @@ project(Worker_Management)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(main.exe main.cpp workerManagement.cpp workerManagement.h personnel.cpp personnel.h worker.h finance.cpp finance.h gmo.cpp gmo.h sales.cpp sales.h production.cpp production.h)
+set(SRCS ./src/main.cpp ./src/workerManagement.cpp ./src/personnel.cpp 
+    ./src/finance.cpp ./src/gmo.cpp ./src/sales.cpp ./src/production.cpp)
+
+ADD_EXECUTABLE(main.exe ${SRCS})
 
