--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 20)
 set(SRCS ./src/main.cpp ./src/workerManagement.cpp ./src/personnel.cpp 
     ./src/finance.cpp ./src/gmo.cpp ./src/sales.cpp ./src/production.cpp)
 
-ADD_EXECUTABLE(main.exe ${SRCS})
+add_executable(main.exe ${SRCS})
 
